--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -1,10 +1,10 @@
-.video-container {
+/* .video-container {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Ensure the video stays in the background */
+  z-index: -1; 
   overflow: hidden;
 }
 
@@ -14,8 +14,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  pointer-events: none; /* Prevent interaction with the video */
-}
+  pointer-events: none; 
+} */
 .custom-shape-divider-top-1717207853 {
   position: absolute;
   top: -10px !important;
