--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -24,43 +24,81 @@
   overflow: hidden;
   line-height: 0;
 }
-.html5-video-player .video-click-tracking, .html5-video-player .video-stream{
+
+.html5-video-player .video-click-tracking, .html5-video-player .video-stream {
   height: 650px !important;
 }
-.Toastify__toast-container--top-right{
+
+.Toastify__toast-container--top-right {
   z-index: 9999999 !important;
   margin-top: 24px;
 }
-  @media (max-width: 576px) { 
-    .slideheight{
-      height: 50vh !important;
-      display: flex;
-      align-items: center;
-    }
-    .slideheight p{
-      font-size: 12px !important;
-    }
-    .countryElement .genreName {
-      opacity: 1; /* Initially hide the element */
-      transition: opacity 0.3s ease; /* Add transition for opacity property */
-    }
-    
-    .swiper {
-      z-index: -1 !important;
-    }
-    
-    .countryElement {
-      backdrop-filter: brightness(0.3) !important; 
-    }
+
+@media (max-width: 576px) {
+  .slideheight {
+    height: 50vh !important;
+    display: flex;
+    align-items: center;
   }
-  @media (max-width: 991.98px) {
-    .swiper {
-      z-index: -1 !important;
-    }
-    .slideheight{
-      height: 50vh !important ;
-      display: flex !important;
-      align-items: center;
-    }
-  
+
+  .slideheight p {
+    font-size: 12px !important;
   }
+
+  .countryElement .genreName {
+    opacity: 1;
+    /* Initially hide the element */
+    transition: opacity 0.3s ease;
+    /* Add transition for opacity property */
+  }
+
+  .swiper {
+    z-index: -1 !important;
+  }
+
+  .countryElement {
+    backdrop-filter: brightness(0.3) !important;
+  }
+
+  .html5-video-player .video-click-tracking, .html5-video-player .video-stream {
+    height: 350px !important;
+  }
+
+  .video-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+  }
+
+  .video-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  }
+  .content{
+    background-image: url('https://i.ibb.co/pvyfDK8/arijit-m-0-F4-Ew-Nk-G5-To-unsplash.jpg') !important;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center ;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .swiper {
+    z-index: -1 !important;
+  }
+
+  .slideheight {
+    height: 50vh !important;
+    display: flex !important;
+    align-items: center;
+  }
+
+}
