--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -91,14 +91,32 @@
 }
 
 @media (max-width: 991.98px) {
-  .swiper {
-    z-index: -1 !important;
+  .html5-video-player .video-click-tracking, .html5-video-player .video-stream {
+    height: 350px !important;
   }
 
-  .slideheight {
-    height: 50vh !important;
-    display: flex !important;
-    align-items: center;
+  .video-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
   }
 
+  .video-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  }
+  .content{
+    background-image: url('https://i.ibb.co/pvyfDK8/arijit-m-0-F4-Ew-Nk-G5-To-unsplash.jpg') !important;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center ;
+  }
 }
